@@ -1,5 +1,11 @@
 2013-11-12  Jeff Law  <law@redhat.com>
 
+	* tree-ssa-threadedge.c (thread_around_empty_blocks): New
+	argument backedge_seen_p.  Set, use and pass it to children
+	appropriately.
+	(thread_through_normal_block): Similarly.
+	(thread_across_edge): Similarly.
+
 	* gimple-ssa-isolate-paths.c (check_loadstore): Mark discovered
 	memory references as volatile.
 	(insert_trap_and_remove_trailing_statements): Fix comment.
